--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "eslint": "^8.50.0",
+    "html-webpack-plugin": "^5.6.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.2.0",
     "prettier": "^3.0.3",
